--- a/package.json
+++ b/package.json
@@ -3,18 +3,31 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://mujlax.github.io/deoneasewebsite",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write .",
+    "deploy": "gh-pages -d dist -b gh-pages",
+    "content:sync": "node scripts/sync-news.mjs",
+    "prepare": "husky"
   },
   "dependencies": {
+    "@mdx-js/react": "^3.1.0",
+    "buffer": "^6.0.3",
+    "gray-matter": "^4.0.3",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^7.6.0",
+    "remark-frontmatter": "^5.0.0",
+    "remark-mdx-frontmatter": "^5.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@mdx-js/rollup": "^3.1.0",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
@@ -22,9 +35,22 @@
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
+    "gh-pages": "^6.2.0",
     "globals": "^16.4.0",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.3.0",
+    "prettier": "^3.4.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --max-warnings=0",
+      "prettier --write"
+    ],
+    "*.{css,md,mdx,json}": [
+      "prettier --write"
+    ]
   }
 }
