--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://mujlax.github.io/deoneasewebsite",
+  "overrides": {
+    "react-helmet-async": {
+      "react": "^19.1.1"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
